# tgbridge

./: .gitignore  CHANGELOG.md  LICENSE  README-ru.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  setup-mc.nu  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  docs.yml
codegen/: generate_config.py  generate_emoji_replacements.py  pyproject.toml
codegen/config/: en.yml  ru.yml
common/: build.gradle  build.gradle.kts
common-jvm21/: build.gradle.kts
common-jvm25/: build.gradle.kts
docs/: .gitignore  Dockerfile  nginx.conf  package.json
docs/.vitepress/: config.mts  en.ts  ru.ts
docs/en/: api.md  commands.md  (+8 more)
fabric/: build.gradle  build.gradle.kts  gradle.properties
fabric-1.19.2/: build.gradle  build.gradle.kts  gradle.properties
fabric-1.20.1/: build.gradle.kts  gradle.properties
fabric-1.20.1-1.20.4/: build.gradle.kts  gradle.properties
fabric-1.20.6/: build.gradle.kts  gradle.properties
fabric-1.20.6-1.21/: build.gradle.kts
fabric-1.20.6-1.21.1/: build.gradle.kts  gradle.properties
fabric-1.20.6-1.21.3/: build.gradle.kts
fabric-1.21/: build.gradle.kts  gradle.properties
forge/: build.gradle
forge-1.16.5/: build.gradle.kts
forge-1.19.2/: build.gradle  build.gradle.kts  gradle.properties
forge-1.20.1/: build.gradle  build.gradle.kts  gradle.properties
neoforge-1.21/: build.gradle.kts  gradle.properties
paper/: build.gradle  build.gradle.kts
tests/: deno.json
translations/: lang-fr.yml  lang-ru.yml  lang-zhs.yml
(+407 files in other folders)
